--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,5 @@
 [core]
-    remote = wineremote
-['remote "wineremote"']
-    url = s3://mlops-demo-abhishek-dvc-bucket
+    remote = gcsremote
+['remote "gcsremote"']
+    url = gs://bluet-terra-dvc
+    projectname = bluet-terra
